--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="hide-overflow">
+    <div class="loader">
+        <div class="circle"></div>
+    </div>
     <header>
         <div class="warning-container">
             <div class="warning">
