--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </div>
     <header>
         <div class="warning-container">
+            <div class="warning-bg"></div>
             <div class="warning">
                 <p>This is a fake landing page this button/link does not work</p>
                 <button class="ok-warning-btn">Ok</button>
