--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
 </head>
 
 <body>
+    <div class="loader">
+        <div class="circle"></div>
+    </div>
     <header>
         <div class="warning-container">
+            <div class="warning-bg"></div>
             <div class="warning">
                 <p>This is a fake landing page this button/link does not work</p>
                 <button class="ok-warning-btn">Ok</button>
